Added pricing section, changed the "purchase" buttons to "get started", made the "get started" buttons scroll the user to the pricing section, and fixed a typo.

--- a/css/utils.css
+++ b/css/utils.css
@@ -20,6 +20,10 @@ body {
 	color: #FFFFFF;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 @font-face {
 	font-family: 'BootstrapIcons';
 	src: url('../assets/fonts/bootstrap-icons.woff') format('woff');
