--- a/css/utils.css
+++ b/css/utils.css
@@ -89,3 +89,15 @@ ul, .navbar-nav a:hover {
 	top: 0;
 	width: 100%;
 }
+
+.blue-to-cyan-text {
+	background: linear-gradient(75deg, rgb(33, 100, 243), #AAFFFF);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.sky-to-blue-text {
+	background: linear-gradient(75deg, #87CEEB, #1E90FF);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
