--- a/index.css
+++ b/index.css
@@ -10,6 +10,10 @@
 	margin: 8px;
 }
 
+#featuresToPricingSeparator {
+	margin-top: -80px; margin-bottom: 80px;
+}
+
 .dark-mode-pricing-card {
 	background-color: #333;
 	color: #fff;
