--- a/css/utils.css
+++ b/css/utils.css
@@ -2,12 +2,10 @@
 	margin-top: auto;
 	margin-bottom: auto;
 }
-
 .horizontally-centered {
 	margin-left: auto;
 	margin-right: auto;
 }
-
 .centered {
 	margin-left: auto;
 	margin-right: auto;
@@ -44,6 +42,19 @@ html, body {
 	backdrop-filter: blur(8px);
 	-webkit-backdrop-filter: blur(8px);
 	z-index: 1000;
+}
+
+.overlay-above-image {
+	position: absolute;
+	top: 0;
+	left: 0;
+	box-sizing: border-box; /* This includes padding in the width and height calculations */
+}
+
+.carousel-item > .overlay-above-image {
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .bootstrap-icon {
