--- a/index.css
+++ b/index.css
@@ -6,6 +6,24 @@
 	margin-right: 50px;
 }
 
+#heroCarousel {
+	width: 100%;
+	height: 100vh; /* Full viewport height */
+}
+
+.carousel-control-prev-icon .dark-carousel-arrow {
+	filter: invert(-1);
+}
+
+.carousel-control-next-icon .dark-carousel-arrow {
+	filter: invert(-1);
+}
+
+.carousel-item img {
+	object-fit: cover; /* Ensures the image covers the entire carousel item */
+
+}
+
 #features .col, .d-flex {
 	gap: 20px;
 }
